# rkstratum-cpu-miner

./: .gitignore  PROJECT_SETUP.md  README.md  package.json
.github/workflows/: build-release.yml  build.yml
screenshots/: README.md
src/: api.rs  index.html  lib.rs  main.js  main.rs  miner.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  main.rs  miner.rs
src/ui/: components.rs  mod.rs  sections.rs  theme.rs
