[package]
name = "rkstratum-cpu-miner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "RKStratum CPU Miner - Standalone CPU mining GUI for Kaspa Testnet 12"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["time", "rt-multi-thread", "macros", "sync"] }
once_cell = "1.21"

# Kaspa dependencies - using git dependencies from tn12 branch
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-pow = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Threading and sync
parking_lot = "0.12"
futures-util = "0.3"

# Time
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
